third_party/move/move-compiler-v2/tests/checking/liveness/abort_typing.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, potentially causing surprising type conflicts.
  ┌─ tests/checking/liveness/abort_typing.move:7:18
  │
7 │         abort(42);
  │                  ^

error: cannot return nothing from a function with result type `u8`
  ┌─ tests/checking/liveness/abort_typing.move:7:18
  │
7 │         abort(42);
  │                  ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, potentially causing surprising type conflicts.
   ┌─ tests/checking/liveness/abort_typing.move:11:17
   │
11 │         abort 42;
   │                 ^

error: cannot return nothing from a function with result type `u8`
   ┌─ tests/checking/liveness/abort_typing.move:11:17
   │
11 │         abort 42;
   │                 ^
